[package]
name = "game"
version = "0.1.0"
authors = ["AnhQuan Nguyen <j4qfrost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmpv = "0.4.5"
rmp-serde = "0.14.4"
rand = "0.7"
serde = { version = "1.0.99", features = ["derive"] }
serde_bytes = "0.11.2"
serde_derive = "1.0.99"
strum = "0.19"
strum_macros = "0.19"