[package]
authors = ["AnhQuan Nguyen <j4qfrost@gmail.com>"]
edition = "2018"
name = "dead_last_server"
version = "0.1.0"

[dependencies]
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
tokio = { version = "0.2.22", default-features = false, features = ["io-std", "macros", "stream", "time", "tcp"] }
tokio-tungstenite = "0.11.0"
url = "2.0.0"
env_logger = "0.7"